添加gateway 使用